# IRA-Bot

.github/workflows/: ros2_ci.yml
src/: dwa_planner.cpp  requirements.txt
src/ira_sim/: CMakeLists.txt  package.xml
src/ira_sim/include/ira_sim/: ira.hpp
src/ira_sim/launch/: demo1_world.launch.py  demo_world.launch.py  empty_world.launch.py  robot_state_publisher.launch.py  spawn.launch.py
src/ira_sim/models/turtlebot3_burger/: model.sdf
src/ira_sim/src/: ira.cpp
src/ira_sim/urdf/: turtlebot3_burger.urdf  turtlebot3_burger_cam.urdf
src/ira_slam/: CMakeLists.txt  package.xml
src/ira_slam/launch/: cartographer.launch.py  occupancy_grid.launch.py
src/teleop_pkg/: package.xml  setup.py
src/teleop_pkg/launch/: teleop.launch.py
src/teleop_pkg/teleop_pkg/: teleop_keyboard.py
src/turtlebot3_navigation2/: package.xml
