<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ira_slam</name>
  <version>2.3.6</version>
  <description>
    ROS 2 launch scripts for cartographer
  </description>
  <maintainer email="ashwinsivakumar.in@gmail.com">Ashwin</maintainer>
  <license>Apache 2.0</license>

  <author email="ashwinsivakumar.in@gmail.com">Ashwin</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
